--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ def decryptfunc():
     else:
         encrypt = False
         decrypt = True
-        js.document.getElementById("decryptbutton").innerHTML = "decrypt : on"
+        js.document.getElementById("decryptbutton").innerHTML = "encrypt : on"
         js.document.getElementById("encryptbutton").innerHTML = "decrypt : off"
 
 def getrandkey():
